# de-home-assignment

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: bigquery_schema.sql  dataflow_design.md
outputs/: cleaned_events.jsonl  cleaning_report.json  metrics_per_service_per_minute.csv
scripts/: run_api.py  run_pipeline.py  run_quality_gate.py
src/de_home_assignment/: __init__.py  api.py  pipeline.py  quality_gate.py
tests/: test_api.py  test_assignment_dataset_regression.py  test_pipeline.py  test_pipeline_artifacts.py  test_quality_gate.py
